skins/larry/styles.css
/* ... */
#taskbar a.button-addressbook:hover span.button-inner,
#taskbar a.button-addressbook.button-selected span.button-inner {
	background-position: 0 -72px;
}

#taskbar a.button-settings span.button-inner {
	background-position: 0 -96px;
}

#taskbar a.button-settings:hover span.button-inner,
#taskbar a.button-settings.button-selected span.button-inner {
	background-position: 0 -120px;
}

#taskbar a.button-calendar span.button-inner {
	background-position: 0 -144px;
}

#taskbar a.button-calendar:hover span.button-inner,
#taskbar a.button-calendar.button-selected span.button-inner {
	background-position: 0 -168px;
}

#taskbar .minmodetoggle {
	position: absolute;
	top: 0;
	right: 0;
	display: block;
	width: 19px;
	height: 46px;
	cursor: pointer;
	background: url(images/buttons.png) -35px -1778px no-repeat;
}

.minimal #taskbar .minmodetoggle {
	height: 42px;
	background-position: -35px -1820px;
}

#mainscreen {
	position: absolute;
	top: 88px;
	left: 10px;
	right: 10px;
	bottom: 20px;
}

.minimal #mainscreen {
	top: 62px;
}

.minimal #mainscreen.offset {
	top: 102px;
}

.partwin #mainscreen {
	top: 60px
}

.extwin #mainscreen {
	top: 40px;
}

#mainscreen.offset {
	top: 132px;
}

#mainscreen .offset {
	margin-top: 42px;
}

.uibox {
	border: 1px solid #a3a3a3;
	border-radius: 4px;
	overflow: hidden;
	box-shadow: 0 0 2px #999;
	-o-box-shadow: 0 0 2px #999;
	-webkit-box-shadow: 0 0 2px #999;
	-moz-box-shadow: 0 0 2px #999;
	background: #fff;
}

.minwidth {
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	width: 100%;
	min-width: 1024px;
}

.scroller {
	overflow: auto;
}

.readtext {
	width: 42em;
	padding: 12px;
	font-size: 12px;
}

.readtext > h1,
.readtext > h2,
.readtext > h3 {
	margin-top: 0;
}

.watermark {
	background-image: url(images/watermark.jpg);
	background-position: center;
	background-repeat: no-repeat;
}

/* fix scrolling within iframes in webkit browsers on touch devices */
@media screen and (-webkit-min-device-pixel-ratio:0) {
	.iframebox {
		overflow: auto;
		-webkit-overflow-scrolling: touch;
	}
}


/*** lists ***/

.listbox {
	background: #d9ecf4;
	overflow: hidden;
}

.listbox .scroller {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	bottom: 0;
	overflow-x: hidden;
	overflow-y: auto;
}

.listbox .scroller.withfooter {
	bottom: 42px;
}

.listbox .boxtitle + .scroller {
	top: 34px;
}

.boxtitle,
.uibox .listing thead td {
	font-size: 12px;
	font-weight: bold;
	padding: 10px 8px 3px 8px;
	height: 20px;  /* doesn't affect table-cells in FF */
	margin: 0;
	text-shadow: 0px 1px 1px #fff;
	border-bottom: 1px solid #bbd3da;
	white-space: nowrap;
}

.uibox .listing thead td {
	padding-bottom: 8px;
	height: auto;
}

.uibox .boxtitle,
.uibox .listing thead td {
	background: #b0ccd7;
	color: #004458;
	border-radius: 4px 4px 0 0;
}

.listbox .listitem,
.listbox .tablink,
.listing tbody td,
.listing li {
	display: block;
	border-top: 1px solid #fff;
	border-bottom: 1px solid #bbd3da;
	cursor: default;
	font-weight: normal;
}

.listbox .listitem a,
.listbox .tablink a,
.listing tbody td,
.listing li a {
	display: block;
	color: #376572;
	text-shadow: 0px 1px 1px #fff;
	text-decoration: none;
	cursor: default;
	padding: 6px 8px 2px 8px;
	height: 17px; /* doesn't affect table-cells in FF */
	white-space: nowrap;
}

.listing tbody td {
	display: table-cell;
	padding-bottom: 5px;
	height: auto;
	min-height: 14px;
}

.webkit .listing tbody td {
	height: 14px;
}

.listbox .listitem.selected,
.listbox .tablink.selected,
.listbox .listitem.selected > a,
.listbox .tablink.selected > a,
.listing tbody tr.unfocused td,
.listing tbody tr.selected td,
.listing li.selected,
.listing li.selected > a {
	color: #004458;
	font-weight: bold;
	background-color: #c7e3ef;
}

ul.listing {
	display: block;
	list-style: none;
	margin: 0;
	padding: 0;
}

ul.listing li {
	background-color: #d9ecf4;
}

ul.listing li.droptarget,
table.listing tr.droptarget td {
	background-color: #e8e798;
}

table.listing,
table.layout {
	border: 0;
	width: 100%;
	border-spacing: 0;
}

table.layout td {
	vertical-align: top;
}

.listbox .boxfooter {
	position: absolute;
	bottom: 0;
	left: 0;
	width: 100%;
	height: 42px;
	border-top: 1px solid #ccdde4;
	background: #d9ecf4;
	-webkit-box-shadow: inset 0 1px 0 0 #fff;
	-moz-box-shadow: inset 0 1px 0 0 #fff;
	box-shadow: inset 0 1px 0 0 #fff;
	white-space: nowrap;
	overflow: hidden;
}

.uibox .boxfooter {
	border-radius: 0 0 4px 4px;
}

.boxfooter .listbutton {
	display: inline-block;
	text-decoration: none;
	width: 48px;
	border-right: 1px solid #fff;
	background: #c7e3ef;
	padding: 3px 0;
	margin-top: 1px;
}

.uibox .boxfooter .listbutton:first-child {
	border-radius: 0 0 0 4px;
}

.boxfooter .listbutton .inner {
	display: inline-block;
	width: 48px;
	height: 35px;
	text-indent: -5000px;
	background: url(images/buttons.png) -1000px 0 no-repeat;
}

.boxfooter .listbutton.add .inner {
	background-position: 10px -1301px;
}

.boxfooter .listbutton.delete .inner {
	background-position: 10px -1342px;
}

.boxfooter .listbutton.groupactions .inner {
	background-position: 5px -1382px;
}

.boxfooter .listbutton.addto .inner {
	background-position: 5px -1422px;
}

.boxfooter .listbutton.addcc .inner {
	background-position: 5px -1462px;
}

.boxfooter .listbutton.addbcc {
	width: 54px;
}

.boxfooter .listbutton.addbcc .inner {
	width: 54px;
	background-position: 2px -1502px;
}

.boxfooter .listbutton.removegroup .inner {
	background-position: 5px -1540px;
}

.boxfooter .listbutton.disabled .inner {
	opacity: 0.4;
	filter: alpha(opacity=40);
}

.boxfooter .countdisplay {
	display: inline-block;
	position: relative;
	top: 10px;
	color: #69929e;
	padding: 3px 6px;
}

.boxpagenav {
	position: absolute;
	top: 10px;
	right: 6px;
	width: auto;
}

.boxpagenav a.icon {
	display: inline-block;
	padding: 1px 3px;
	height: 13px;
	width: 14px;
	text-indent: 1000px;
	vertical-align: bottom;
	overflow: hidden;
	background: url(images/buttons.png) -4px -286px no-repeat;
}
/* ... */

